src/scss/base/_global.scss
@use '../abstracts' as a;

html {
    height: 100%;
}

body {
    height: 100%;
    font-family: var(--ff-primary);
    font-size: var(--fs-body);
    background-color: var(--Jagged-Ice);
    // min-height: 100vh;
    @include a.flexbox($direction: column, $justify: flex-start, $align: center, $gap: a.rem(64));

    @include a.bp($from: "tablet") {
        margin-block-start: a.rem(80);
        @include a.flexbox($direction: column, $justify: flex-start, $align: center, $gap: a.rem(52));
    }
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
}

input[type="radio"] {
    /* Add if not using autoprefixer */
    -webkit-appearance: none;
    appearance: none;
    /* For iOS < 15 to remove gradient background */
    background-color: #fff;
    /* Not removed via appearance */
    margin: 0;
    display: none;
}

.message {
    position: absolute;
    top: a.rem(-48);
    left: 50%;
    transform: translateX(-50%);
    color: var(--Sherpa-Blue);
    font-weight: var(--fw-bold);
    width: 100%;
    text-align: center;
    z-index: -1;
}

